spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_declarations.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn main() -> bool {
    decl x, x;
    true
}


error: Variable declared more than once
  ┌─ testinput:2:13
  │
2 │     decl x, x;
  │             ^ This variable has been declared more than once
  │
note: Previously declared here
  ┌─ testinput:2:10
  │
2 │     decl x, x;
  │          ^
  │


